--- a/HomePage.html
+++ b/HomePage.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barnabas Babatunde</title>
     <link rel="stylesheet" href="Stylesheet.css"/>
-    <!--SEO starts here-->
-    <!--SEO ends here-->
+<!--SEO starts here-->
+    <meta name="description" content="A summary of who I am, my skils and competences, and my experience as a frontend web developer">
+    <meta name="keywords" content="Barnabas, Babatunde, frontend, web, developer, experience, skills, academic, about">
+    
+    <!--Facebook openGraph starts here-->
+    <meta property="og:url" content="http://portfolio-barnabas.herokuapp.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Barnabas Babatunde - portfolio">
+    <meta property="og:description" content="A summary of who I am, my skils and competences, and my experience as a frontend web developer">
+    <meta property="og:image" content="http://portfolio-barnabas.herokuapp.com/barnabas.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="620">
+    <meta property="og:image:height" content="540">
+    <!--Facebook openGraph ends here-->
+
+    <!--Twitter Cards starts here-->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@babatundebarna1">
+    <meta name="twitter:image" content="http://portfolio-barnabas.herokuapp.com/barnabas.jpg">
+    <!--Twitter Cards ends here-->
+
+    <!--Mobile optimization starts here-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!--Mobile optimization ends here-->
+<!--SEO ends here-->
 </head>
 <body>
     <header class="header" aria-label="header">
@@ -15,18 +39,26 @@
                 <li class="list__item" tabindex="0" style="text-align: left; padding-left: 10px; margin-right: 20%;"><a href="HomePage.html">Home</a></li>
                 <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="#about_barnabas">About</a></li>
                 <li class="list__item" tabindex="0" style="text-align: left; padding-left: 10px; margin-right: 20%;"><a href="MyWork.html">My Work</a></li>
-                <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="Contact.html">Contact</a></li>
+                <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="#contact_barnabas">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <div role="main" class="wrapper">
+    <div role="main" class="wrap">
         <!--Introduction starts here-->
         <section class="intro intro--modifier" aria-label="introduction">
             <section class="intro__brief">
-                <p>
+                <p class="brief-paragraph1">
                     <span style="font-size: 25px;">Hi There!</span><br/>
                     <span style="color: rgb(31, 30, 30); font-size: 18px; font-weight: bold; letter-spacing: 0.5px;">I'm Barnabas Babatunde,</span><br/>
-                    A frontend web developer and JavaScript advocate.
+                    A frontend web developer and lover of JavaScript. 
+                </p>
+                <br/>
+                <p class="brief-paragraph2">
+                    I am fascinated by clean, minimalist, maintainable designs and codes, and 
+                    strive to incorporate them in my work ethic. I spend most of my free time fantasizing 
+                    on design schemes for web projects.<br/><br/><br/><br/>
+                    I find JavaScript a very versatile and expressive language that gives developers like myself the 
+                    freedom to imagine, and to bring such imaginations to fruition through code.
                 </p>
             </section>
             <section class="intro__image">
@@ -34,7 +66,8 @@
                     <img style="width: 100%; height: 100%; border-radius: 50%;" alt="Barnabas Babatunde" src="barnabas.jpg"/>
                 </div>
             </section>
-            <section class="intro__social"></section>
+            <section class="intro__social">
+                Please click the <span style="color: rgb(2, 2, 37);">'My Work'</span> link in the navigation bar to view my web development/design projects.<br/><br/>
                 SOCIAL MEDIA ICONS GO HERE
             </section>
         </section>
@@ -47,7 +80,11 @@
                 <img style="width: 100%; height: 100%; border-radius: 50%; opacity: 0.7;" alt="skillful hands" src="skillfulHands.jpg"/>
             </div>
             <article class="skills__article">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis est nihil illo atque provident laudantium amet nostrum ea debitis, velit vel unde omnis. Suscipit pariatur inventore laudantium cumque sit voluptate.
+                My skills include: HTML, CSS (with BEM architecture), SASS (Syntactically Awesome 
+                Style Sheets), JavaScript (Functional programming, ES6, Vanilla JS, 
+                etc), Responsive web design, Search Engine Optimiztion (Limited to Facebook OpenGraph, Twitter Cards, 
+                Google structured data), Web accessibility (Limited knowledge), Chrome developer tools<br/>
+                I am passionate about learning and comfortable with learning any technology, on the job.
             </article>
         </section>
         <!--Skill-set ends here-->
@@ -59,7 +96,10 @@
                 <img style="width: 100%; height: 100%; border-radius: 50%; opacity: 0.7;" alt="eye of experience" src="eyeOfExperience.jpg"/>
             </div>
             <article class="experience__article">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis est nihil illo atque provident laudantium amet nostrum ea debitis, velit vel unde omnis. Suscipit pariatur inventore laudantium cumque sit voluptate.
+                I have over six months of experience building web projects 
+                with HTML, CSS, SASS (with BEM architecture), JavaScript, Nodejs, leveraging the power of 
+                Chrome developer tools to debug my code. I do not have any industry experience as of yet, 
+                but I'm eager to acquire real industry experience.
             </article>
         </section>
         <!--Experience summary ends here-->
@@ -71,7 +111,11 @@
                 <img style="width: 100%; height: 100%; border-radius: 50%; opacity: 0.7;" alt="book of knowledge" src="bookOfKnowledge.jpg"/>
             </div>
             <article class="academic__article">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis est nihil illo atque provident laudantium amet nostrum ea debitis, velit vel unde omnis. Suscipit pariatur inventore laudantium cumque sit voluptate.
+                I am currently enrolled as a student of electrical and electronics 
+                engiineering at The University of Lagos, Nigeria, with an outstanding 
+                record of academic excellence and achievements.<br/>
+                My experiaence as a student has taught me to approach problems with a logical 
+                mindset, which I often apply while building web projects. 
             </article>
         </section>
         <!--Academic background ends here-->
@@ -84,7 +128,9 @@
                 <img style="width: 100%; height: 100%; border-radius: 50%; opacity: 1.0;" alt="barnabas" src="barnabas.jpg"/>
             </div>
             <article class="about__article">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis est nihil illo atque provident laudantium amet nostrum ea debitis, velit vel unde omnis. Suscipit pariatur inventore laudantium cumque sit voluptate.
+                I am a hard-working individual who loves working with people to achieve much bigger things 
+                I often find myself bingeing on popcorn because it gives me joy. Many have 
+                described me as a positive, energetic, and forward-looking person. 
             </article>
         </section>
         <!--About Me ends here-->
@@ -96,13 +142,22 @@
                 <img style="width: 100%; height: 100%; border-radius: 50%; opacity: 0.7;" alt="bicycle" src="bicycle.png"/>
             </div>
             <article class="hobbies__article">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis est nihil illo atque provident laudantium amet nostrum ea debitis, velit vel unde omnis. Suscipit pariatur inventore laudantium cumque sit voluptate.
+                If I am not infront of the computer coding, then I must be cycling along the 
+                streets. Cycling calms me and gives me the energy to think over things in my life.
+                I also spend a lot of time listening to music - hip hop, country, jazz, etc.
             </article>
         </section>
         <!--Hobbies ends here-->
     </div>
-    <footer class="footer">
-
+    <footer aria-label="footer" class="footer footer--modifier">
+        <p class="footer__paragraph">Thanks for your time and kind consideration.<br/> Hope I'm the right pick.</p>
+        <hr style="width: 90%; margin-right: 5%; margin-left: 5%;"/>
+        <h2 class="footer__heading">CONTACT:</h2>
+        <ul class="footer__list">
+            <li class="contact">0818 123 5418</li>
+            <li class="contact">babatundebarnabas@gmail.com</li>
+        </ul>
+        <a name="contact_barnabas"></a>
     </footer>
 
     <!--script-->
