--- a/MyWork.html
+++ b/MyWork.html
@@ -14,7 +14,7 @@
         <nav class="nav" aria-label="navigation">
             <ul class="list list--modifier">
                 <li class="list__item" tabindex="0" style="text-align: left; padding-left: 10px; margin-right: 20%;"><a href="HomePage.html">Home</a></li>
-                <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="#about_barnabas">About</a></li>
+                <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="./HomePage.html#about_barnabas" class="about-me">About</a></li>
                 <li class="list__item" tabindex="0" style="text-align: left; padding-left: 10px; margin-right: 20%;"><a href="MyWork.html">My Work</a></li>
                 <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="#contact_barnabas">Contact</a></li>
             </ul>
@@ -28,43 +28,59 @@
         <div class="main-content">
             <section class="section section--modifier">
                 <section class="section__about" aria-label="project description">
-                    <h2>Description</h2>
+                    <h2 style="font-size: 25px; color: black; font-weight: 400; margin-bottom: 10px;">Andela Website Clone</h2>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error magni, deserunt fuga velit eveniet quas reprehenderit nam doloremque. Quae perspiciatis at amet rerum? Fugiat repellendus itaque dolor omnis, asperiores corrupti.
+                        This project is an imitation of the Andela website frontend layout.
+                        I built it from scratch with HTML and CSS. No framework or library was used.
+                        I employed CSS flexbox and CSS grids layouts to create a flexible, mobile-first experience.
                     </article>
                 </section>
                 <section class="section__links" aria-label="project links">
-                    <p class="section__links__paragraph">View live project here</p>
-                    <p class="section__links__paragraph">View GitHub code here</p>
+                    <p class="section__links__paragraph">View live project <a href="http://barnabas-portfolio.herokuapp.com">here</a></p>
+                    <p class="section__links__paragraph">View GitHub code <a href="https://github.com/Barnabas19/portfolio">here</a></p>
                 </section>
             </section>
             <section class="section section--modifier">
                 <section class="section__about" aria-label="project description">
-                    <h2>Description</h2>
+                    <h2 style="font-size: 25px; color: black; font-weight: 400; margin-bottom: 10px;">My Portfolio Website</h2>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error magni, deserunt fuga velit eveniet quas reprehenderit nam doloremque. Quae perspiciatis at amet rerum? Fugiat repellendus itaque dolor omnis, asperiores corrupti.
+                        This current site was designed and built by me. I used HTML, SASS (with BEM CSS architecture), and JavaScript. No framework 
+                        or library was used. I used a flexbox-based layout for responsiveness and good mobile-first experience.
                     </article>
                 </section>
                 <section class="section__links" aria-label="project links">
-                    <p class="section__links__paragraph">View live project here</p>
-                    <p class="section__links__paragraph">View GitHub code here</p>
+                    <p class="section__links__paragraph">View live project <a href="http://portfolio-barnabas.herokuapp.com">here</a></p>
+                    <p class="section__links__paragraph">View GitHub code <a href="https://github.com/Barnabas19/BarnabasPortfolioWebsite">here</a></p>
                 </section>
             </section>
             <section class="section section--modifier">
                 <section class="section__about" aria-label="project description">
-                    <h2>Description</h2>
+                    <h2 style="font-size: 25px; color: black; font-weight: 400; margin-bottom: 10px;">Dog Photo Gallery App</h2>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error magni, deserunt fuga velit eveniet quas reprehenderit nam doloremque. Quae perspiciatis at amet rerum? Fugiat repellendus itaque dolor omnis, asperiores corrupti.
+                        I built this application using the fetch browser API to make network 
+                        request for dog photos from a public API on the internet. The frontend has a respponsive 
+                        flexbox-based layout, which resizes well to desktop, tablet and mobile views.
                     </article>
                 </section>
                 <section class="section__links" aria-label="project links">
-                    <p class="section__links__paragraph">View live project here</p>
-                    <p class="section__links__paragraph">View GitHub code here</p>
+                    <p class="section__links__paragraph">View live project <a href="http://dog-photo-gallery.herokuapp.com">here</a></p>
+                    <p class="section__links__paragraph">View GitHub code <a href="https://github.com/Barnabas19/dog-photo-gallery">here</a></p>
                 </section>
             </section>
         </div>
     </div>
     <!--main ends here-->
+
+    <footer aria-label="footer" class="footer footer--modifier">
+        <p class="footer__paragraph">Thanks for your time and kind consideration.<br/> Hope I'm the right pick.</p>
+        <hr style="width: 90%; margin-right: 5%; margin-left: 5%;"/>
+        <h2 class="footer__heading">CONTACT:</h2>
+        <ul class="footer__list">
+            <li class="contact">0818 123 5418</li>
+            <li class="contact">babatundebarnabas@gmail.com</li>
+        </ul>
+        <a name="contact_barnabas"></a>
+    </footer>
     
     <!--Script-->
     <script type="text/JavaScript" src="Scripts.js"></script>
