--- a/HomePage.html
+++ b/HomePage.html
@@ -37,7 +37,7 @@
         <nav class="nav" aria-label="navigation">
             <ul class="list list--modifier">
                 <li class="list__item" tabindex="0" style="text-align: left; padding-left: 10px; margin-right: 20%;"><a href="HomePage.html">Home</a></li>
-                <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="#about_barnabas">About</a></li>
+                <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="#about_barnabas" class="about-me">About</a></li>
                 <li class="list__item" tabindex="0" style="text-align: left; padding-left: 10px; margin-right: 20%;"><a href="MyWork.html">My Work</a></li>
                 <li class="list__item" tabindex="0" style="text-align: right; padding-right: 10px;"><a href="#contact_barnabas">Contact</a></li>
             </ul>
@@ -50,7 +50,7 @@
                 <p class="brief-paragraph1">
                     <span style="font-size: 25px;">Hi There!</span><br/>
                     <span style="color: rgb(31, 30, 30); font-size: 18px; font-weight: bold; letter-spacing: 0.5px;">I'm Barnabas Babatunde,</span><br/>
-                    A frontend web developer and lover of JavaScript. 
+                    A frontend web developer and JavaScript aficionado. 
                 </p>
                 <br/>
                 <p class="brief-paragraph2">
@@ -68,7 +68,7 @@
             </section>
             <section class="intro__social">
                 Please click the <span style="color: rgb(2, 2, 37);">'My Work'</span> link in the navigation bar to view my web development/design projects.<br/><br/>
-                SOCIAL MEDIA ICONS GO HERE
+                <!--SOCIAL MEDIA ICONS GO HERE-->
             </section>
         </section>
         <!--Introduction ends here-->
