--- a/HomePage.html
+++ b/HomePage.html
@@ -81,8 +81,7 @@
             </div>
             <article class="skills__article">
                 My skills include: HTML, CSS (with BEM architecture), SASS (Syntactically Awesome 
-                Style Sheets), JavaScript (Functional programming, ES6, Vanilla JS, 
-                etc), Responsive web design, Search Engine Optimiztion (Limited to Facebook OpenGraph, Twitter Cards, 
+                Style Sheets), JavaScript (Functional programming, ES6, etc), Responsive web design, Search Engine Optimization (Limited to Facebook OpenGraph, Twitter Cards, 
                 Google structured data), Web accessibility (Limited knowledge), Chrome developer tools<br/>
                 I am passionate about learning and comfortable with learning any technology, on the job.
             </article>
@@ -99,7 +98,7 @@
                 I have over six months of experience building web projects 
                 with HTML, CSS, SASS (with BEM architecture), JavaScript, Nodejs, leveraging the power of 
                 Chrome developer tools to debug my code. I do not have any industry experience as of yet, 
-                but I'm eager to acquire real industry experience.
+                but I'm eager to acquire industry experience.
             </article>
         </section>
         <!--Experience summary ends here-->
@@ -112,7 +111,7 @@
             </div>
             <article class="academic__article">
                 I am currently enrolled as a student of electrical and electronics 
-                engiineering at The University of Lagos, Nigeria, with an outstanding 
+                engineering at The University of Lagos, Nigeria, with an outstanding 
                 record of academic excellence and achievements.<br/>
                 My experiaence as a student has taught me to approach problems with a logical 
                 mindset, which I often apply while building web projects. 
@@ -128,9 +127,9 @@
                 <img style="width: 100%; height: 100%; border-radius: 50%; opacity: 1.0;" alt="barnabas" src="barnabas.jpg"/>
             </div>
             <article class="about__article">
-                I am a hard-working individual who loves working with people to achieve much bigger things 
+                I am a hard-working individual who loves working with people to achieve much bigger things. 
                 I often find myself bingeing on popcorn because it gives me joy. Many have 
-                described me as a positive, energetic, and forward-looking person. 
+                described me as a positive and energetic person. 
             </article>
         </section>
         <!--About Me ends here-->
