--- a/MyWork.html
+++ b/MyWork.html
@@ -67,6 +67,32 @@
                     <p class="section__links__paragraph">View GitHub code <a href="https://github.com/Barnabas19/dog-photo-gallery">here</a></p>
                 </section>
             </section>
+            <section class="section section--modifier">
+                <section class="section__about" aria-label="project description">
+                    <h2 style="font-size: 25px; color: black; font-weight: 400; margin-bottom: 10px;">E-Commerce Page</h2>
+                    <article>
+                        I built this application using HTML, CSS and Vanilla JavaScript. The project 
+                        was undertaken to mimick a typical E-Transaction page.
+                    </article>
+                </section>
+                <section class="section__links" aria-label="project links">
+                    <p class="section__links__paragraph">View live project <a href="http://e-commerce-page.herokuapp.com">here</a></p>
+                    <p class="section__links__paragraph">View GitHub code <a href="https://github.com/Barnabas19/E-Commerce-Page">here</a></p>
+                </section>
+            </section>
+            <section class="section section--modifier">
+                <section class="section__about" aria-label="project description">
+                    <h2 style="font-size: 25px; color: black; font-weight: 400; margin-bottom: 10px;">News Updates Website</h2>
+                    <article>
+                        I built this project with HTML and CSS (Using flexbox-based layout), to mimick 
+                        a typical news site
+                    </article>
+                </section>
+                <section class="section__links" aria-label="project links">
+                    <p class="section__links__paragraph">View live project <a href="http://news-updates-website.herokuapp.com">here</a></p>
+                    <p class="section__links__paragraph">View GitHub code <a href="https://github.com/Barnabas19/News-Website">here</a></p>
+                </section>
+            </section>
         </div>
     </div>
     <!--main ends here-->
